# projects

./: .gitignore  Function Practice Exercises.ipynb  exercises.ipynb  financial_times_scrapping.ipynb  numpy lms.ipynb  numpy_ex.ipynb  pets.csv  product_sales.ipynb  project_1_pandas_movies.ipynb  python workshop.ipynb
.devcontainer/: devcontainer.json
BBSR/: bbsr_eda.ipynb
excercises/: python_exercises.ipynb
project 1bis_ Salaries/: Pandas_Salaries_Exercise.ipynb
project 2_Blueberry_Winery/: p2_sp1.ipynb  p2_sp3_machinelearning.ipynb  p2_sp3_ml_type.ipynb  p2_sp3_quality_labels.ipynb  p2_sp3_smote_correction.ipynb  p2_sp4_hyperparameters.ipynb  winequality.names
project 2_Blueberry_Winery/wine_repo/: LICENSE  Makefile  README.md  pyproject.toml
project 2_Blueberry_Winery/wine_repo/docs/: mkdocs.yml
project 2_Blueberry_Winery/wine_repo/docs/docs/: index.md
project 2_Blueberry_Winery/wine_repo/wine_quality_prediction/: __init__.py  dataset.py  features.py  plots.py
project 2_Blueberry_Winery/wine_repo/wine_quality_prediction/modeling/: predict.py  train.py
project_1_Movies/: project_1_pandas_movies.ipynb
project_3_ capitalbikeshare/: .gitignore  cabi_2024.ipynb  dc_maryland_updated_2024.ipynb  dc_maryland_workbook.ipynb  linear_regression_pg.ipynb  maryland_cabi.ipynb  p3_daily.ipynb  p3_hourly.ipynb  project_3_ capitalbikeshare.code-workspace  project_3_sp_1.ipynb  project_3_sp_2.ipynb
project_3_ capitalbikeshare_copy/: County_Boundary_Ln.json  County_Boundary_Py.json  Municipal_Boundary_Py.json  Municipal_Boundary_Py2.json  (+2 more)
stock_api/: .gitignore  (+8 more)
(+40 files in other folders)
