[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wine_quality_prediction"
version = "0.0.1"
description = "Machine learning model that predicts wine type and quality labels"
authors = [
  { name = "Pablo" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.7"


[tool.ruff]
line-length = 99
src = ["wine_quality_prediction"]
include = ["pyproject.toml", "wine_quality_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["wine_quality_prediction"]
force-sort-within-sections = true

